--- a/app/src/main/res/values/list_item_styles.xml
+++ b/app/src/main/res/values/list_item_styles.xml
@@ -27,7 +27,8 @@
     
     <style name="Layout.ListItem" parent="">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">88dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">?selectableItemBackground</item>
         <item name="android:padding">16dp</item>
     </style>
     
