--- a/app/src/main/res/layout/fragment_transaction_list.xml
+++ b/app/src/main/res/layout/fragment_transaction_list.xml
@@ -6,30 +6,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/transition_list"
+    
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-        tools:listitem="@layout/list_item_transaction"/>
-    
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/background"
-        app:elevation="0dp">
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
         
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <LinearLayout
+            android:id="@+id/content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:title="Сентябрь 2018"
-            app:contentInsetStart="72dp"
-            app:layout_scrollFlags="scroll|enterAlways"/>
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            
+            <include layout="@layout/view_transaction_list_header"/>
+            
+            <TextView
+                style="@style/Text.ListItem.Secondary"
+                android:text="@string/last_transaction"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"/>
+            
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/transition_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/background"
+                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                tools:listitem="@layout/list_item_transaction"/>
+        
+        </LinearLayout>
     
-    </android.support.design.widget.AppBarLayout>
-    
+    </android.support.v4.widget.NestedScrollView>
     
     <android.support.design.bottomappbar.BottomAppBar
         android:id="@+id/bottom_bar"
@@ -41,7 +50,6 @@
         app:hideOnScroll="true"
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:layout_scrollFlags="scroll|enterAlways"
         app:navigationIcon="@drawable/ic_menu"/>
     
     <android.support.design.widget.FloatingActionButton
