--- a/app/src/main/res/values/list_item_styles.xml
+++ b/app/src/main/res/values/list_item_styles.xml
@@ -36,5 +36,9 @@
         <item name="android:layout_width">40dp</item>
         <item name="android:layout_height">40dp</item>
     </style>
+    
+    <style name="Layout.CardView" parent="Layout.ListItem">
+        <item name="cardCornerRadius">4dp</item>
+    </style>
 
 </resources>
