--- a/app/src/main/res/layout/list_item_transaction.xml
+++ b/app/src/main/res/layout/list_item_transaction.xml
@@ -14,6 +14,7 @@
         app:layout_constraintStart_toStartOf="parent"/>
     
     <ImageView
+        android:id="@+id/transaction_item_image_category"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:src="@drawable/ic_food"
