--- a/app/src/main/res/drawable/ic_money.xml
+++ b/app/src/main/res/drawable/ic_money.xml
@@ -5,5 +5,5 @@
         android:height="24dp">
     <path
         android:pathData="M11.8 10.9C9.53 10.31 8.8 9.7 8.8 8.75 8.8 7.66 9.81 6.9 11.5 6.9c1.42 0 2.13 0.54 2.39 1.4 0.12 0.4 0.45 0.7 0.87 0.7l0.3 0C15.72 9 16.19 8.35 15.96 7.73 15.54 6.55 14.56 5.57 13 5.19L13 4.5C13 3.67 12.33 3 11.5 3 10.67 3 10 3.67 10 4.5l0 0.66C8.06 5.58 6.5 6.84 6.5 8.77c0 2.31 1.91 3.46 4.7 4.13 2.5 0.6 3 1.48 3 2.41 0 0.69 -0.49 1.79 -2.7 1.79C9.85 17.1 9 16.51 8.67 15.67 8.52 15.28 8.18 15 7.77 15l-0.28 0c-0.67 0 -1.14 0.68 -0.89 1.3 0.57 1.39 1.9 2.21 3.4 2.53l0 0.67c0 0.83 0.67 1.5 1.5 1.5 0.83 0 1.5 -0.67 1.5 -1.5l0 -0.65c1.95 -0.37 3.5 -1.5 3.5 -3.55 0 -2.84 -2.43 -3.81 -4.7 -4.4z"
-        android:fillColor="@color/icon_grey" />
+        android:fillColor="#fff" />
 </vector>
