--- a/app/src/main/res/layout/fragment_category_list.xml
+++ b/app/src/main/res/layout/fragment_category_list.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                 android:layout_width="match_parent"
-                                                 android:layout_height="match_parent"
                                                  xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                 xmlns:tools="http://schemas.android.com/tools">
+                                                 xmlns:tools="http://schemas.android.com/tools"
+                                                 android:layout_width="match_parent"
+                                                 android:layout_height="match_parent">
     
     <android.support.v7.widget.RecyclerView
         android:id="@+id/category_list"
@@ -11,7 +11,17 @@
         android:layout_height="match_parent"
         android:background="@color/background"
         app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-        tools:listitem="@layout/list_item_transaction"/>
+        tools:listitem="@layout/list_item_category"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+    
+    
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/add_category_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_plus"
+        android:layout_margin="16dp"
+        android:layout_gravity="bottom|end"/>
     
     <include layout="@layout/view_toolbar"/>
 
