--- a/app/src/main/res/menu/bottom_sheet_main_menu.xml
+++ b/app/src/main/res/menu/bottom_sheet_main_menu.xml
@@ -4,14 +4,12 @@
     <item
         android:id="@+id/menu_analytics"
         android:icon="@drawable/ic_analytics"
-        android:title="@string/analytics"
-        />
+        android:title="@string/analytics"/>
     
     <item
-        android:id="@+id/menu_categories"
+        android:id="@+id/categoryListFragment"
         android:icon="@drawable/ic_categories"
-        android:title="@string/categories"
-    />
+        android:title="@string/categories"/>
     
 
 </menu>
