--- a/app/src/main/res/values/list_item_styles.xml
+++ b/app/src/main/res/values/list_item_styles.xml
@@ -32,6 +32,16 @@
         <item name="android:padding">16dp</item>
     </style>
     
+    <style name="Layout.ListItem.SingLine" parent="">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">56dp</item>
+        <item name="android:background">?selectableItemBackground</item>
+        <item name="android:paddingTop">8dp</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:paddingEnd">16dp</item>
+        <item name="android:paddingStart">16dp</item>
+    </style>
+    
     <style name="Layout.ListItem.Image" parent="">
         <item name="android:layout_width">40dp</item>
         <item name="android:layout_height">40dp</item>
