--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,19 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
     
     <item
-        android:id="@+id/app_bar_search"
-        android:icon="@drawable/ic_search"
-        android:title="@string/search"
-        app:showAsAction="ifRoom"/>
-    
-    <item
-        android:id="@+id/app_bar_settings"
-        android:title="@string/settings"
-        app:showAsAction="never"/>
-    
-    <item
-        android:id="@+id/app_bar_about"
-        android:title="@string/about"
-        app:showAsAction="never"/>
+        android:id="@+id/templateListFragment"
+        android:icon="@drawable/ic_template"
+        android:title="@string/templates"
+        app:showAsAction="always"/>
 
 </menu>
