[UI] [DB-SCHEME]
- remove description from transactin entity
- update transaction list item (add category title, remove descriptio, and some minor ui fix)

--- a/app/src/main/res/layout/fragment_add_edit_category.xml
+++ b/app/src/main/res/layout/fragment_add_edit_category.xml
@@ -19,7 +19,7 @@
             android:orientation="vertical">
             
             <android.support.design.widget.TextInputLayout
-                style="@style/Widget.Shrine.TextInputLayout"
+                style="@style/Widget.TextInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
