--- a/app/src/main/res/layout/fragment_add_edit_transaction.xml
+++ b/app/src/main/res/layout/fragment_add_edit_transaction.xml
@@ -17,7 +17,7 @@
             android:orientation="vertical">
             
             <android.support.design.widget.TextInputLayout
-                style="@style/Widget.Shrine.TextInputLayout"
+                style="@style/Widget.TextInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -34,6 +34,10 @@
                     tools:text="250"/>
             
             </android.support.design.widget.TextInputLayout>
+    
+            <TextView style="@style/Text.ListItem.Primary"
+                      android:text="@string/transaction_type"
+                      android:layout_marginStart="16dp"/>
             
             <HorizontalScrollView android:layout_width="wrap_content"
                                   android:layout_height="wrap_content"
@@ -82,7 +86,7 @@
             
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/date_selector_field"
-                style="@style/Widget.Shrine.TextInputLayout"
+                style="@style/Widget.TextInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:hintAnimationEnabled="false"
@@ -103,7 +107,7 @@
             </android.support.design.widget.TextInputLayout>
             
             <android.support.design.widget.TextInputLayout
-                style="@style/Widget.Shrine.TextInputLayout"
+                style="@style/Widget.TextInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -121,26 +125,8 @@
             </android.support.design.widget.TextInputLayout>
             
             <android.support.design.widget.TextInputLayout
-                style="@style/Widget.Shrine.TextInputLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginTop="8dp"
-                android:hint="@string/description">
-                
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/transition_description_input"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="text"
-                    tools:text="В к-р Большой, на Мстители: Война бесконечности"/>
-            
-            </android.support.design.widget.TextInputLayout>
-            
-            <android.support.design.widget.TextInputLayout
                 android:id="@+id/transition_category_field"
-                style="@style/Widget.Shrine.TextInputLayout"
+                style="@style/Widget.TextInputLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:hintAnimationEnabled="false"
@@ -161,7 +147,8 @@
             
             </android.support.design.widget.TextInputLayout>
             
-            <include android:id="@+id/transaction_save_as_template_field" layout="@layout/view_transaction_save_as_template_item"/>
+            <include android:id="@+id/transaction_save_as_template_field"
+                     layout="@layout/view_transaction_save_as_template_item"/>
         
         </LinearLayout>
     
