--- a/app/src/main/res/layout/fragment_category_list.xml
+++ b/app/src/main/res/layout/fragment_category_list.xml
@@ -5,14 +5,30 @@
                                                  android:layout_width="match_parent"
                                                  android:layout_height="match_parent">
     
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/category_list"
+    
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/background"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-        tools:listitem="@layout/list_item_category"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/category_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/background"
+            android:visibility="gone"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            tools:listitem="@layout/list_item_category"
+            tools:visibility="visible"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        
+        <ProgressBar
+            android:id="@+id/category_list_progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
+    
+    </FrameLayout>
     
     
     <android.support.design.widget.FloatingActionButton
