--- a/app/src/main/res/values/list_item_styles.xml
+++ b/app/src/main/res/values/list_item_styles.xml
@@ -40,6 +40,13 @@
         <item name="android:padding">16dp</item>
     </style>
     
+    <style name="Layout.ListItem.StickyHeader" parent="">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">16dp</item>
+    </style>
+    
     <style name="Layout.ListItem.SingLine" parent="">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">56dp</item>
